--- a/MyShop.Web/Views/Admin/Index.cshtml
+++ b/MyShop.Web/Views/Admin/Index.cshtml
@@ -5,15 +5,20 @@
 
 <!DOCTYPE html>
 
-<html ng-app>
+<html ng-app="myModule">
+
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
     <script src="~/Scripts/plusgin/angular/angular.js"></script>
+    <script src="~/Scripts/spa/app.js"></script>
 </head>
 <body>
-    <div> 
-        1000 +2000={{1000+2000}}
+    <div ng-controller="schoolController">
+        <my-shop-directive></my-shop-directive>
+        <input type="number" ng-model="num"/> Validate text {{num}}
+         <button ng-click="checkNumber()">Check </button>
+        {{message}}
     </div>
 </body>
 </html>
