--- a/MyShop.Web/Views/Admin/Index.cshtml
+++ b/MyShop.Web/Views/Admin/Index.cshtml
@@ -5,7 +5,7 @@
 
 <!DOCTYPE html>
 
-<html ng-app="myModule">
+<html>
 
 <head>
     <meta name="viewport" content="width=device-width" />
@@ -14,11 +14,6 @@
     <script src="~/Scripts/spa/app.js"></script>
 </head>
 <body>
-    <div ng-controller="schoolController">
-        <my-shop-directive></my-shop-directive>
-        <input type="number" ng-model="num"/> Validate text {{num}}
-         <button ng-click="checkNumber()">Check </button>
-        {{message}}
-    </div>
+   
 </body>
 </html>
