--- a/MyShop.Web/app/components/product_categories/productCategoryListView.html
+++ b/MyShop.Web/app/components/product_categories/productCategoryListView.html
@@ -1,13 +1,13 @@
 ﻿  <!-- Content Header (Page header) -->
 <section class="content-header">
     <h1>
-        Trang chủ
-        <small>Đây là trang quản trị</small>
+        Danh mục sản phẩm
+
     </h1>
     <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-dashboard"></i> Trang chủ </a></li>
-        <li><a href="#">Danh mục sản phẩm</a></li>
-        <li class="active">Danh sách</li>
+        <li><a href="#"><i class="fa fa-dashboard"></i> Trang chủ</a></li>
+        <li><a href="#">Sản phẩm</a></li>
+        <li class="active">Danh mục sản phẩm</li>
     </ol>
 </section>
 <!-- Main content -->
@@ -21,45 +21,40 @@
                 <button class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove"><i class="fa fa-times"></i></button>
             </div>
         </div>
-
         <div class="box-body">
             <div class="row">
                 <div class="col-md-12">
                     <table class="table table-striped">
                         <tr>
                             <th style="width: 5%">ID</th>
-                            <th style="width: 55%">Tên danh mục</th>
+                            <th style="width:55%">Tên danh mục</th>
                             <th style="width: 20%">Ngày tạo</th>
                             <th style="width: 10%">Trạng thái</th>
                             <th style="width: 10%">Thao tác</th>
                         </tr>
-
                         <tr ng-repeat="item in productCategories">
                             <td>{{item.ID}}</td>
                             <td>{{item.Name}}</td>
-                            <td>{{item.CreatedDate | date:'dd/MM/yyyy hh:mm'}}</td>
                             <td>
-                            <span ng-class="{'badge bg-red':item.Status==false,'badge bg-green':item.Status==true}">{{item.Status | statusFilter}}</span>
+                                {{item.CreatedDate  | date:'dd/MM/yyyy hh:mm:ss'}}
+                            </td>
+                            <!--class="badge bg-red"-->
+                            <td>
+                                <span ng-class="{'badge bg-red':item.Status==false,'badge bg-green':item.Status==true}">
+                                    {{item.Status | statusFilter}}
+                                </span>
                             </td>
                             <td>
-                               <button class="btn btn-sm btn-primary"><i class="fa fa-pencil"></i></button>
-                                <button class="btn btn-sm btn-danger"><i class="fa fa-trash" aria-hidden="true"></i></button>
+                                <button class="btn btn-sm btn-primary"><i class="fa fa-pencil"></i></button>
+                                <button class="btn  btn-sm btn-danger"><i class="fa fa-trash"></i></button>
                             </td>
                         </tr>
-                       
                     </table>
                 </div>
-                <!-- /.box-body -->
             </div>
-            <!-- /.box -->
-        </div>
-        <!-- /.col -->
-    
-
-    </div><!-- /.box-body -->
-    <!--<div class="box-footer">
-        Footer
-    </div>-->
-    <!-- /.box-footer-->
+        </div><!-- /.box-body -->
+        <div class="box-footer">
+            <pager-directive page="{{page}}" custom-path="{{customPath}}" pages-count="{{pagesCount}}" total-count="{{totalCount}}" search-func="getProductCategories(page)"></pager-directive>
+        </div><!-- /.box-footer-->
     </div><!-- /.box -->
 </section><!-- /.content -->
