--- a/MyShop.Web/Views/Admin/Index.cshtml
+++ b/MyShop.Web/Views/Admin/Index.cshtml
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <!-- Theme style -->
     <link rel="stylesheet" href="/Assets/admin/css/AdminLTE.min.css">
+    <link href="~/Assets/Admin/libs/toastr/toastr.css" rel="stylesheet" />
     <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="/Assets/admin/css/skins/_all-skins.min.css">
@@ -522,8 +523,11 @@
     <!-- Begin embed angularJS -->
     <script src="~/Assets/admin/libs/angular/angular.js"></script>
     <script src="~/Assets/admin/libs/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="~/Assets/Admin/libs/toastr/toastr.js"></script>
+    <!--I define-->
     <script src="~/app/shared/modules/myshop.common.js"></script>
     <script src="~/app/shared/directives/pagerDirective.js"></script>
+    <script src="~/app/shared/serivice/notificationService.js"></script>
     <script src="~/app/shared/filter/statusFilter.js"></script>
     <script src="~/app/shared/serivice/apiService.js"></script>
     <script src="~/app/components/products/product.module.js"></script>
