--- a/MyShop.Web/app/components/product_categories/productCategoryListView.html
+++ b/MyShop.Web/app/components/product_categories/productCategoryListView.html
@@ -32,7 +32,7 @@
                     </div><!-- /input-group -->
                 </div>
             </div>
-        <div class="row"> &nbsp; </div>
+            <div class="row"> &nbsp; </div>
             <div class="row">
                 <div class="col-md-12">
                     <table class="table table-striped table-hover">
@@ -62,8 +62,8 @@
                         </tr>
                         <tfoot>
                             <tr>
-                                <td colspan="5">Tổng số bảng ghi : {{totalCount}}  </td>
-                             
+                                <td colspan="5"><span class="pull-right">Trang: {{page+1}} - Tổng số bản ghi: {{totalCount}}</span></td>
+
                             </tr>
                         </tfoot>
                     </table>
