--- a/MyShop.Web/app/components/product_categories/productCategoryListView.html
+++ b/MyShop.Web/app/components/product_categories/productCategoryListView.html
@@ -30,9 +30,15 @@
                             <button class="btn btn-default" type="button" ng-click="search()">Tìm kiếm</button>
                         </span>
                     </div><!-- /input-group -->
+
+                </div>
+                <div class="col-md-6">
+                    <button class="btn btn-success" ui-sref="add_product_category">Thêm mới</button>
                 </div>
             </div>
+
             <div class="row"> &nbsp; </div>
+        
             <div class="row">
                 <div class="col-md-12">
                     <table class="table table-striped table-hover">
