--- a/MyShop.Web/Views/Admin/Index.cshtml
+++ b/MyShop.Web/Views/Admin/Index.cshtml
@@ -223,7 +223,7 @@
                         </a>
                         <ul class="treeview-menu">
                             <li><a ui-sref="product_categories"><i class="fa fa-circle-o"></i> Danh sách danh mục</a></li>
-                            <li><a ui-sref="product_categories_add"><i class="fa fa-circle-o"></i> Thêm danh mục</a></li>
+                            <li><a ui-sref="add_product_category"><i class="fa fa-circle-o"></i> Thêm danh mục</a></li>
                         </ul>
                     </li>
 
@@ -534,6 +534,7 @@
     <script src="~/app/components/product_categories/productCategories.module.js"></script>
     <script src="~/app/app.js"></script>
     <script src="~/app/components/product_categories/productCategoryListController.js"></script>
+    <script src="~/app/components/product_categories/productCategoryAddController.js"></script>
     <script src="~/app/components/products/productAddController.js"></script>
     <script src="~/app/components/products/productListController.js"></script>
     <script src="~/app/components/home/homeController.js"></script>
