--- a/MyShop.Web/Views/Admin/Index.cshtml
+++ b/MyShop.Web/Views/Admin/Index.cshtml
@@ -530,13 +530,20 @@
     <script src="~/app/shared/serivice/notificationService.js"></script>
     <script src="~/app/shared/filter/statusFilter.js"></script>
     <script src="~/app/shared/serivice/apiService.js"></script>
+    <script src="~/app/shared/serivice/commonService.js"></script>
+
     <script src="~/app/components/products/product.module.js"></script>
     <script src="~/app/components/product_categories/productCategories.module.js"></script>
+
     <script src="~/app/app.js"></script>
+
     <script src="~/app/components/product_categories/productCategoryListController.js"></script>
     <script src="~/app/components/product_categories/productCategoryAddController.js"></script>
+    <script src="~/app/components/product_categories/productCategoryEditController.js"></script>
+
     <script src="~/app/components/products/productAddController.js"></script>
     <script src="~/app/components/products/productListController.js"></script>
+
     <script src="~/app/components/home/homeController.js"></script>
 
 </body>
