--- a/MyShop.Web/app/components/product_categories/productCategoryEditView.html
+++ b/MyShop.Web/app/components/product_categories/productCategoryEditView.html
@@ -1,7 +1,7 @@
 ﻿  <!-- Content Header (Page header) -->
 <section class="content-header">
     <h1>
-        Thêm mới danh mục sản phẩm
+        Cập nhật danh mục : {{productCategory.Name}}
 
     </h1>
     <ol class="breadcrumb">
@@ -15,7 +15,7 @@
 <section class="content">
     <div class="box">
         <div class="box-header with-border">
-            <h3 class="box-title">Thêm mới danh mục sản phẩm</h3>
+            <h3 class="box-title">Cập nhật danh mục sản phẩm</h3>
             <div class="box-tools pull-right">
                 <button class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse"><i class="fa fa-minus"></i></button>
                 <button class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove"><i class="fa fa-times"></i></button>
@@ -27,7 +27,7 @@
             </div>-->
             <!-- /.box-header -->
             <!-- form start -->
-            <form class="form-horizontal" novalidate name="frmAddProductCategory" ng-submit="AddProductCategory()">
+            <form class="form-horizontal" novalidate name="frmUpdateProductCategory" ng-submit="UpdateProductCategory()">
                 <div class="box-body">
                     <div class="form-group">
                         <label for="inputEmail3" class="col-sm-2 control-label">Tên danh mục</label>
@@ -77,7 +77,7 @@
                     <div class="form-group">
                         <label for="inputEmail3" class="col-sm-2 control-label">Meta Keyword</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control"  name="metaKeyword" ng-model="productCategory.MetaKeyword" placeholder="Meta Keyword">
+                            <input type="text" class="form-control" name="metaKeyword" ng-model="productCategory.MetaKeyword" placeholder="Meta Keyword">
                         </div>
                     </div>
 
