--- a/MyShop.Web/Views/Admin/Index.cshtml
+++ b/MyShop.Web/Views/Admin/Index.cshtml
@@ -18,6 +18,7 @@
     <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="/Assets/admin/css/skins/_all-skins.min.css">
+    <link href="~/Assets/Admin/css/custom.css" rel="stylesheet" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -524,6 +525,10 @@
     <script src="~/Assets/admin/libs/angular/angular.js"></script>
     <script src="~/Assets/admin/libs/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="~/Assets/Admin/libs/toastr/toastr.js"></script>
+    <script src="~/Assets/Admin/libs/bootbox/bootbox.js"></script>
+    <script src="~/Assets/Admin/libs/ngBootbox/ngBootbox.js"></script>
+
+
     <!--I define-->
     <script src="~/app/shared/modules/myshop.common.js"></script>
     <script src="~/app/shared/directives/pagerDirective.js"></script>
