--- a/MyShop.Web/app/components/product_categories/productCategoryListView.html
+++ b/MyShop.Web/app/components/product_categories/productCategoryListView.html
@@ -34,6 +34,8 @@
                 </div>
                 <div class="col-md-6">
                     <button class="btn btn-success" ui-sref="add_product_category">Thêm mới</button>
+                    <button class="btn btn-danger" ng-click="deleteMultiple()" disabled id="btnDelete">Xóa đã chọn</button>
+
                 </div>
             </div>
 
@@ -43,6 +45,7 @@
                 <div class="col-md-12">
                     <table class="table table-striped table-hover">
                         <tr>
+                            <th><input name="all" ng-click="selectAll()" type="checkbox" /></th>
                             <th style="width: 5%">ID</th>
                             <th style="width:55%">Tên danh mục</th>
                             <th style="width: 20%">Ngày tạo</th>
@@ -50,6 +53,7 @@
                             <th style="width: 10%">Thao tác</th>
                         </tr>
                         <tr ng-repeat="item in productCategories">
+                            <td><input type="checkbox" ng-model="item.checked" name="all" /></td>
                             <td>{{item.ID}}</td>
                             <td>{{item.Name}}</td>
                             <td>
