--- a/MyShop.Web/app/components/products/productAddView.html
+++ b/MyShop.Web/app/components/products/productAddView.html
@@ -1,13 +1,13 @@
 ﻿  <!-- Content Header (Page header) -->
 <section class="content-header">
     <h1>
-        Thêm mới danh mục sản phẩm
+        Thêm mới sản phẩm
 
     </h1>
     <ol class="breadcrumb">
         <li><a href="#"><i class="fa fa-dashboard"></i> Trang chủ</a></li>
         <li><a href="#">Sản phẩm</a></li>
-        <li class="active">Danh mục sản phẩm</li>
+        <li class="active">Sản phẩm</li>
     </ol>
 </section>
 
@@ -15,7 +15,7 @@
 <section class="content">
     <div class="box">
         <div class="box-header with-border">
-            <h3 class="box-title">Thêm mới danh mục sản phẩm</h3>
+            <h3 class="box-title">Thêm mới sản phẩm</h3>
             <div class="box-tools pull-right">
                 <button class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse"><i class="fa fa-minus"></i></button>
                 <button class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove"><i class="fa fa-times"></i></button>
@@ -76,6 +76,16 @@
                     </div>
 
                     <div class="form-group">
+                        <label for="inputEmail3" class="col-sm-2 control-label">Thêm hình ảnh</label>
+                        <div class="col-sm-10">
+                            <ul class="list-inline">
+                                <li ng-repeat="img in moreImages"><img ng-src="{{img}}" width="100" /></li>
+                            </ul>
+                            <button  class="btn btn-default" type="button" ng-click="ChooseMoreImage()">Chọn ảnh</button>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
                         <label for="inputEmail3" class="col-sm-2 control-label">Giá </label>
                         <div class="col-sm-10">
                             <input type="number" class="form-control" ng-maxlength="256" name="price" required ng-model="product.Price" placeholder="Giá"> VNĐ
@@ -93,7 +103,7 @@
                     <div class="form-group">
                         <label for="inputEmail3" class="col-sm-2 control-label">Bảo hành</label>
                         <div class="col-sm-10">
-                            <input type="number" class="form-control" ng-maxlength="256" name="warranty" ng-model="product.Warranty" placeholder="Giá khuyến mãi"> VNĐ
+                            <input type="number" class="form-control" ng-maxlength="256" name="warranty" ng-model="product.Warranty" placeholder="Bảo hành"> Tháng
                         </div>
                     </div>
 
@@ -104,6 +114,14 @@
                             <span ng-show="frmAddProduct.content.$touched==true ? frmAddProduct.content.$invalid :false " class="has-error">Phải nhập mô tả </span>
                         </div>
                     </div>
+
+                    <div class="form-group">
+                        <label for="inputEmail3" class="col-sm-2 control-label">Tags</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" name="tags" ng-model="product.Tags" placeholder="Tags1,Tags2">
+                        </div>
+                    </div>
+
 
                     <div class="form-group">
                         <label for="inputEmail3" class="col-sm-2 control-label">Meta Keyword</label>
