--- a/MyShop.Web/Views/Admin/Index.cshtml
+++ b/MyShop.Web/Views/Admin/Index.cshtml
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="/Assets/admin/css/AdminLTE.min.css">
     <link href="~/Assets/Admin/libs/iCheck/square/blue.css" rel="stylesheet" />
     <link href="~/Assets/Admin/libs/toastr/toastr.css" rel="stylesheet" />
+    <link href="~/Assets/Admin/libs/angular-loading-bar/build/loading-bar.css" rel="stylesheet" />
     <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="/Assets/admin/css/skins/_all-skins.min.css">
@@ -61,12 +62,17 @@
     <script src="~/Assets/Admin/libs/ckfinder/ckfinder.js"></script>
     <script src="~/Assets/Admin/libs/ngBootbox/ngBootbox.js"></script>
     <script src="~/Assets/Admin/libs/ng-ckeditor/ng-ckeditor.js"></script>
+    <script src="~/Assets/Admin/libs/angular-local-storage/dist/angular-local-storage.js"></script>
+    <script src="~/Assets/Admin/libs/angular-loading-bar/build/loading-bar.js"></script>
 
 
     <!--I define-->
     <script src="~/app/shared/modules/myshop.common.js"></script>
     <script src="~/app/shared/directives/pagerDirective.js"></script>
     <script src="~/app/shared/serivice/notificationService.js"></script>
+    <script src="~/app/shared/serivice/authData.js"></script>
+    <script src="~/app/shared/serivice/authenticationService.js"></script>
+    <script src="~/app/shared/serivice/loginService.js"></script>
     <script src="~/app/shared/filter/statusFilter.js"></script>
     <script src="~/app/shared/serivice/apiService.js"></script>
     <script src="~/app/shared/serivice/commonService.js"></script>
