--- a/MyShop.Web/app/components/login/loginView.html
+++ b/MyShop.Web/app/components/login/loginView.html
@@ -7,11 +7,11 @@
         <p class="login-box-msg">Đăng nhập để truy cập hệ thống</p>
         <form role="form" method="post" ng-submit="loginSubmit()">
             <div class="form-group has-feedback">
-                <input type="email" class="form-control" placeholder="Email">
+                <input type="text" class="form-control" ng-model="loginData.userName" placeholder="Tài khoản">
                 <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
             </div>
             <div class="form-group has-feedback">
-                <input type="password" class="form-control" placeholder="Password">
+                <input type="password" class="form-control" ng-model="loginData.password" placeholder="Password">
                 <span class="glyphicon glyphicon-lock form-control-feedback"></span>
             </div>
             <div class="row">
