--- a/MyShop.Web/app/shared/views/baseView.html
+++ b/MyShop.Web/app/shared/views/baseView.html
@@ -1,17 +1,16 @@
-﻿<!-- Site wrapper -->
-<div class="wrapper">
+﻿<div class="wrapper">
     <header class="main-header">
         <!-- Logo -->
-        <a href="#" class="logo">
+        <a ui-sref="home" class="logo">
             <!-- mini logo for sidebar mini 50x50 pixels -->
             <span class="logo-mini"><b>A</b>LT</span>
             <!-- logo for regular state and mobile devices -->
-            <span class="logo-lg"><b>Admin</b>LTE</span>
+            <span class="logo-lg"><b>My</b>SHOP</span>
         </a>
         <!-- Header Navbar: style can be found in header.less -->
         <nav class="navbar navbar-static-top" role="navigation">
             <!-- Sidebar toggle button-->
-            <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
+            <a href="javascript:void(0);" class="sidebar-toggle" data-toggle="offcanvas" role="button">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -70,49 +69,18 @@
                         </ul>
                     </li>
                     <!-- Tasks: style can be found in dropdown.less -->
-                    <li class="dropdown tasks-menu">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <i class="fa fa-flag-o"></i>
-                            <span class="label label-danger">9</span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li class="header">You have 9 tasks</li>
-                            <li>
-                                <!-- inner menu: contains the actual data -->
-                                <ul class="menu">
-                                    <li>
-                                        <!-- Task item -->
-                                        <a href="#">
-                                            <h3>
-                                                Design some buttons
-                                                <small class="pull-right">20%</small>
-                                            </h3>
-                                            <div class="progress xs">
-                                                <div class="progress-bar progress-bar-aqua" style="width: 20%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                                                    <span class="sr-only">20% Complete</span>
-                                                </div>
-                                            </div>
-                                        </a>
-                                    </li><!-- end task item -->
-                                </ul>
-                            </li>
-                            <li class="footer">
-                                <a href="#">View all tasks</a>
-                            </li>
-                        </ul>
-                    </li>
                     <!-- User Account: style can be found in dropdown.less -->
                     <li class="dropdown user user-menu">
                         <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">
                             <img src="/Assets/admin/img/user2-160x160.jpg" class="user-image" alt="User Image">
-                            <span class="hidden-xs">Alexander Pierce</span>
+                            <span class="hidden-xs">{{authentication.userName}}</span>
                         </a>
                         <ul class="dropdown-menu">
                             <!-- User image -->
                             <li class="user-header">
                                 <img src="/Assets/admin/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                                 <p>
-                                    Alexander Pierce - Web Developer
+                                    {{authentication.userName}}
                                     <small>Member since Nov. 2012</small>
                                 </p>
                             </li>
@@ -134,7 +102,7 @@
                                     <a href="#" class="btn btn-default btn-flat">Profile</a>
                                 </div>
                                 <div class="pull-right">
-                                    <a href="#" ng-click="logout()" class="btn btn-default btn-flat">Thoát</a>
+                                    <a href="#" ng-click="logOut()" class="btn btn-default btn-flat">Thoát</a>
                                 </div>
                             </li>
                         </ul>
@@ -158,7 +126,7 @@
                     <img src="/Assets/admin/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                 </div>
                 <div class="pull-left info">
-                    <p>Alexander Pierce</p>
+                    <p>{{authentication.userName}}</p>
                     <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
                 </div>
             </div>
@@ -174,18 +142,18 @@
             <!-- /.search form -->
             <!-- sidebar menu: : style can be found in sidebar.less -->
             <ul class="sidebar-menu">
-                <li class="header">MAIN NAVIGATION</li>
+                <li class="header">Điều hướng chính</li>
                 <li class="treeview">
-                    <a href="#">
+                    <a href="javascript:void(0);">
                         <i class="fa fa-dashboard"></i>
                         <span>Trang chủ</span>
-                      
+
                     </a>
-                  
+
                 </li>
 
                 <li class="treeview">
-                    <a href="#">
+                    <a href="javascript:void(0);">
                         <i class="fa fa-files-o"></i>
                         <span>Sản phẩm</span>
                         <i class="fa fa-angle-left pull-right"></i>
@@ -197,7 +165,7 @@
                 </li>
 
                 <li class="treeview">
-                    <a href="#">
+                    <a href="javascript:void(0);">
                         <i class="fa fa-files-o"></i>
                         <span>Danh mục sản phẩm</span>
                         <i class="fa fa-angle-left pull-right"></i>
