--- a/MyShop.Web/app/components/login/loginView.html
+++ b/MyShop.Web/app/components/login/loginView.html
@@ -17,7 +17,7 @@
             <div class="row">
                 <div class="col-xs-8">
                     <div class="checkbox icheck">
-                        <label>
+                        <label  style="margin-left:20px;">
                             <input type="checkbox" class="icheck"> Nhớ mật khẩu
                         </label>
                     </div>
