--- a/MyShop.Web/app/shared/views/baseView.html
+++ b/MyShop.Web/app/shared/views/baseView.html
@@ -127,7 +127,7 @@
                 </div>
                 <div class="pull-left info">
                     <p>{{authentication.userName}}</p>
-                    <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+                    <a href="javascript:void(0);"><i class="fa fa-circle text-success"></i> Online</a>
                 </div>
             </div>
             <!-- search form -->
