--- a/MyShop.Web/Views/Home/Index.cshtml
+++ b/MyShop.Web/Views/Home/Index.cshtml
@@ -104,7 +104,8 @@
                             {
                                 <span class="actual">@product.PromotionPrice.Value.ToString("N0")</span>
                             }
-                            <span class="reducedfrom">@product.Price.ToString("N0")</span>
+                            <span class=@(product.PromotionPrice.HasValue?"reducedfrom":"actual")>@product.Price.ToString("N0")</span>
+
                             <span class="rating">
                                 <input type="radio" class="rating-input" id="rating-input-1-5" name="rating-input-1">
                                 <label for="rating-input-1-5" class="rating-star1"> </label>
@@ -147,7 +148,8 @@
                             {
                                 <span class="actual">@product.PromotionPrice.Value.ToString("N0")</span>
                             }
-                            <span class="reducedfrom">@product.Price.ToString("N0")</span>
+                            <span class=@(product.PromotionPrice.HasValue?"reducedfrom":"actual")>@product.Price.ToString("N0")</span>
+
                             <span class="rating">
                                 <input type="radio" class="rating-input" id="rating-input-1-5" name="rating-input-1">
                                 <label for="rating-input-1-5" class="rating-star1"> </label>
@@ -170,5 +172,6 @@
 
         <div class="clearfix"> </div>
     </div>
-
+<div class="clearfix"> </div>
+    </div>
 }
