--- a/MyShop.Web/Views/Shared/Category.cshtml
+++ b/MyShop.Web/Views/Shared/Category.cshtml
@@ -55,8 +55,8 @@
         <div class="grid-chain-bottom chain-watch">
             <span class="actual dolor-left-grid">300$</span>
             <span class="reducedfrom">500$</span>
-            <h6><a href="single.html">Lorem ipsum dolor</a></h6>
+            <h6><a href="single.html">Tên sản phẩm ở đây</a></h6>
         </div>
     </div>
-    <a class="view-all all-product" href="product.html">VIEW ALL PRODUCTS<span> </span></a>
+    <a class="view-all all-product" href="product.html">Xem tất cả sản phẩm<span> </span></a>
 </div>
