--- a/MyShop.Web/Views/Shared/Layout.cshtml
+++ b/MyShop.Web/Views/Shared/Layout.cshtml
@@ -11,6 +11,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <link href="/Assets/Client/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <!--theme-style-->
     <link href="/Assets/Client/css/style.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="~/Assets/Client/css/etalage.css" rel="stylesheet" />
     <link href="/Assets/Client/css/mystyle.css" rel="stylesheet" />
     <!--//theme-style-->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -19,6 +20,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
     <!--//fonts-->
     <script src="/Assets/Client/js/jquery.min.js"></script>
+    <script src="~/Assets/Client/js/jquery.etalage.min.js"></script>
+    
+
     <!--script-->
 
     <script type="text/javascript" src="/Assets/Client/js/ScrollToFixed.js"></script>
@@ -27,7 +31,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             $('#fixed-header').scrollToFixed();
         });
     </script>
-
+    @RenderSection("headerJS", required: false)
 </head>
 <body>
     <!--header-->
@@ -40,9 +44,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     @RenderSection("homeProducts", required: false)
     <!---->
 
-
-    <div class="clearfix"> </div>
-    </div>
 
 
     @{ Html.RenderAction("Category", "Home");}
