--- a/MyShop.Web/Views/Shared/Header.cshtml
+++ b/MyShop.Web/Views/Shared/Header.cshtml
@@ -40,7 +40,7 @@
             <div class="container">
                 <div class="header-bottom-left">
                     <div class="logo">
-                        <a href="index.html"><img src="/Assets/Client/images/logo.png" alt=" " /></a>
+                        <a href="/trang-chu.html"><img src="/Assets/Client/images/logo.png" alt=" " /></a>
                     </div>
                     <div class="search">
                         <input type="text" value="" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = '';}">
@@ -50,12 +50,12 @@
                     <div class="clearfix"> </div>
                 </div>
                 <div class="header-bottom-right">
-                    <div class="account"><a href="login.html"><span> </span>YOUR ACCOUNT</a></div>
+                    <div class="account"><a href="tai-khoan.html"><span> </span>TÀI KHOẢN</a></div>
                     <ul class="login">
-                        <li><a href="login.html"><span> </span>LOGIN</a></li> |
-                        <li><a href="register.html">SIGNUP</a></li>
+                        <li><a href="dang-nhap.html"><span> </span>ĐĂNG NHẬP</a></li> |
+                        <li><a href="register.html">THOÁT</a></li>
                     </ul>
-                    <div class="cart"><a href="#"><span> </span>CART</a></div>
+                    <div class="cart"><a href="/gio-hang.html"><span> </span>Giỏ hàng</a></div>
                     <div class="clearfix"> </div>
                 </div>
                 <div class="clearfix"> </div>
